--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://WeissDotEXE.github.io/portofolio-v1",
+  "homepage": "http://WeissDotEXE.github.io/portofolio-v0",
   "name": "portofolio",
   "version": "0.1.0",
   "private": true,
@@ -49,5 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
+  }
 }
