--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-scrollmagic": "^2.3.0",
     "react-spring": "^9.1.2",
     "react-typing-animation": "^1.6.2",
+    "redux": "^4.1.0",
     "scrollmagic": "^2.0.8",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
