--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.6.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.0.1",
     "netlify-cli": "^3.31.16",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
