--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.0.1",
+    "emailjs-com": "^2.6.4",
     "netlify-cli": "^3.31.16",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
